gitops/overlays/prod/matomo-basic-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: matomo-basic-auth
spec:
  basicAuth:
    realm: Authentication Required - Matomo
    secret: matomo-basic-auth
