gitops/overlays/prod/strapi-strip-prefix-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strapi-strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /cms
      - /admin
