gitops/overlays/prod/traefik-https-redirect-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
