gitops/overlays/prod/wasserball-web-basic-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: wasserball-web-basic-auth
spec:
  basicAuth:
    realm: Authentication Required - Wasserball
    secret: wasserball-web-basic-auth
