gitops/overlays/prod/web-scale-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wasserball-web
spec:
  replicas: 1
