gitops/overlays/prod/matomo-http-redirect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matomo-http-redirect
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-traefik-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: matomo.wasserball.elk-software.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: matomo
                port:
                  number: 80
