gitops/overlays/prod/matomo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matomo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - Matomo"
    nginx.ingress.kubernetes.io/auth-secret: matomo-basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - matomo.wasserball.elk-software.de
      secretName: matomo-tls
  rules:
    - host: matomo.wasserball.elk-software.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: matomo
                port:
                  number: 80
