gitops/overlays/prod/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wasserball-web
  annotations:
    traefik.ingress.kubernetes.io/router.customrequestheaders: "X-Forwarded-Host:wasserball.elk-software.de"
spec:
  ingressClassName: nginx
  rules:
    - host: wasserball.elk-software.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wasserball-web
                port:
                  number: 80
